--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -19,7 +19,11 @@ set(
     src/actions/idle.cpp
     src/actions/move.cpp
 
+    src/core/the_core.cpp
+
     src/entities/entity.cpp
+    src/entities/wall.cpp
+    src/entities/player.cpp
 
     src/utils/timer.cpp
 )
@@ -31,7 +35,14 @@ find_package(Curses REQUIRED)
 
 target_include_directories(main PRIVATE include)
 
+find_package(Lua REQUIRED)
+target_include_directories(main PRIVATE ${LUA_INCLUDE_DIR})
+target_link_libraries(main PRIVATE ${LUA_LIBRARIES})
+
+target_include_directories(main PRIVATE vcpkg_installed/arm64-osx/include)
+
 target_include_directories(main PRIVATE ${CURSES_INCLUDE_DIRS})
 target_compile_options(main PRIVATE ${CURSES_CFLAGS})
 target_link_libraries(main PRIVATE ${CURSES_LIBRARIES})
+target_link_libraries(main PRIVATE panel)
 
