--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_EXTENSIONS OFF)
+add_compile_definitions(D_XOPEN_SOURCE_EXTENDED=1)
+add_compile_definitions(NCURSES_WIDECHAR=1)
 
 project(Hatrix)
 
@@ -14,6 +16,8 @@ set(
     src/world.cpp
     src/controller.cpp
     src/gamemap.cpp
+
+    src/ui/editor.cpp
 
     src/actions/action.cpp
     src/actions/null.cpp
@@ -33,20 +37,18 @@ set(
 )
 
 add_executable(main ${SOURCES})
-
-
-target_include_directories(main PRIVATE include)
-
+ 
 find_package(Lua REQUIRED)
 target_include_directories(main PRIVATE ${LUA_INCLUDE_DIR})
 target_link_libraries(main PRIVATE ${LUA_LIBRARIES})
+ 
+target_include_directories(main PRIVATE ${LUABRIDGE3_INCLUDE_DIRS})
 
 set(CURSES_NEED_NCURSES TRUE)
 find_package(Curses REQUIRED)
+
 target_include_directories(main PRIVATE ${CURSES_INCLUDE_DIRS})
 target_compile_options(main PRIVATE ${CURSES_CFLAGS})
-target_link_libraries(main PRIVATE ncurses)
-target_link_libraries(main PRIVATE panel)
+target_link_libraries(main PRIVATE ncurses panel)
 
-target_include_directories(main PRIVATE vcpkg_installed/arm64-osx/include)
-
+target_include_directories(main PRIVATE include)
