增加了视野记忆，但是需要进一步优化色彩和代码结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ set(
     src/core/the_core.cpp
 
     src/entities/entity.cpp
+    src/entities/character.cpp
+    src/entities/ground.cpp
     src/entities/wall.cpp
     src/entities/player.cpp
     src/entities/door.cpp
